--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<embed
-  src="https://kylepajari.github.io/Docs/resume.pdf"
-  type="application/pdf"
-/>
+<embed src="https://kylepajari.github.io/resume.pdf" type="application/pdf" />
