--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<embed src="https://kylepajari.github.io/resume.pdf" type="application/pdf" />
+<embed
+  src="https://kylepajari.github.io/resume/Resume.pdf"
+  type="application/pdf"
+/>
